# LeakBench-RiskCloud

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
case_studies/home_credit/: README.md  __init__.py
case_studies/home_credit/configs/: boundary_v1.yaml  bronze_v1.yaml  features_v1.yaml  prediction_points_v1.yaml  silver_v1.yaml
case_studies/home_credit/manifests/: data_manifest.yaml  snapshot_manifest.template.yaml  snapshot_manifest.yaml
case_studies/home_credit/pipelines/: bronze_ingestion.py  features.py  prediction_points.py  silver_ingestion.py  spark_env.py  woe_rules.py
case_studies/home_credit/pipelines/shared/: governance.py
case_studies/home_credit/scripts/: run_bronze.py  validate_manifest.py
case_studies/home_credit/streaming/contracts/: event_envelope.py  feature_computation.py
case_studies/home_credit/streaming/producer/: replay.py
deploy/local/: docker-compose.realtime.yml  smoke-test.sh
deploy/local/flink/: flink-conf.yaml
deploy/local/kafka/: init-topics.sh
deploy/vm/: .env.example  README.md  bootstrap.sh  deploy.sh  run_demo.sh  verify.sh
docs/: design.md  phase1_implementation_report.md
docs/adr/: 0001-rename-platform-to-riskcloud.md  0002-home-credit-proxy-time-boundary.md  0003-bronze-publication-and-idempotency.md  0004-silver-standardization.md  0005-realtime-streaming-architecture.md
riskcloud/: __init__.py  freeze.py
riskcloud/adapters/: __init__.py  base.py
riskcloud/adapters/home_credit/: __init__.py  adapter.py  boundary.py  feature_catalog.py  field_mapping.py
riskcloud/contracts/: __init__.py  document.py  event.py  feature_catalog.py  prediction_point.py  validation.py
scripts/: run_resume_demo.py
tests/fixtures/home_credit/: application_train.csv  bureau.csv  bureau_balance.csv
tests/fixtures/home_credit_phase1/: application_train.csv  bureau.csv  bureau_balance.csv
tests/platform/: test_adapter.py  test_contracts.py  test_scientific_freeze.py
tests/platform/home_credit/: __init__.py  test_bronze_contract.py  test_bronze_iceberg_integration.py  test_feature_catalog_closure.py  test_home_credit_adapter.py  test_home_credit_boundary.py  test_home_credit_events.py  test_home_credit_feature_catalog.py  test_home_credit_manifest_binding.py  test_manifest.py  test_p10_skeleton.py  test_phase1_e2e.py  test_silver_iceberg_integration.py  test_snapshot_template.py
tests/streaming/: test_event_contracts.py  test_event_producer.py  test_kafka_config.py
